[gd_scene load_steps=4 format=3 uid="uid://c5sj08tuk0xvm"]

[ext_resource type="Script" uid="uid://byb4jrhusoy85" path="res://Character/Enemy/BaseEnemy.gd" id="1_lp23x"]
[ext_resource type="Script" uid="uid://dtp8usgsa0jne" path="res://State Machine/StateMachine.gd" id="2_gos77"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e4je2"]

[node name="BaseEnemy" type="CharacterBody3D"]
script = ExtResource("1_lp23x")
MRaycastXScale = 1.0
MRaycastYScale = 1.0
MRaycastZTarget = 5.0
MeleeDamage = 1.0
MeleeAttackDistance = 2.0
SpriteSheet = "uid://ivnos65reslg"
SpriteSheetSize = Vector2(6, 4)
SpriteMoveMaxPos = 2
SpriteAttackMinPos = 3
SpriteAttackMaxPos = 5
ConeOfVision = 0.75
SearchDistance = 20.0
AwarenessZone = 3.0
MoveSpeed = 15.0
metadata/_custom_type_script = "uid://byb4jrhusoy85"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_gos77")
metadata/_custom_type_script = "uid://dtp8usgsa0jne"

[node name="ObstructionCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 0)

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(3.8, 0, 0, 0, 3.8, 0, 0, 0, 3.8, 0, 0, 0)
shaded = true
texture_filter = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_e4je2")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="MeleeAttack" type="RayCast3D" parent="."]

[node name="RangedAttack" type="RayCast3D" parent="."]

[node name="NavAgent" type="NavigationAgent3D" parent="."]
